Fixing scrollbar visibility
Making the scrollbar to not be shown in any browser.

--- a/scss/layout/_posts_pages.scss
+++ b/scss/layout/_posts_pages.scss
@@ -426,9 +426,9 @@ img.size-thumbnail.alignright {
 
   .swp-images {
     position: absolute;
-    overflow: scroll;
+    overflow: hidden;
     height: 520px;
-    width: 167px;
+    width: 170px;
     right: -30px;
     margin: 0px 0 0px 20px;
   }
